Sat Feb  5 11:29:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.h (GET_PARSER): raise TypeError.

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

	* ext/json/parser/parser.h (GET_PARSER): check if initialized.
	  [ruby-core:35079]

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

Sun May  1 18:35:34 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/fileutils/fileasserts.rb (assert_block): little workaround
	  for [ruby-dev:43174].

Sat Feb  5 20:40:34 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_block): pass arguments
	  as-is.  [ruby-dev:43174]

Sat Feb  5 03:37:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::LowMethods): make low level methods
	  in NoWrite and DryRun to do nothing.  [ruby-dev:43129]

	* test/fileutils/fileasserts.rb: add message arguments.

	* test/fileutils/fileasserts.rb (Test::Unit::Assertions#assert_block):
	  show the given message.

Sat Feb  5 02:09:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_getline, parser_set_encode): set encoding of lines
	  in SCRIPT_LINES__ as source encoding.  [ruby-dev:43168]

Wed Apr  6 21:25:08 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* thread.c (thread_s_kill): workaround for [ruby-core:35086].
	  fixes #4367.

	* test/ruby/test_thread.rb (TestThread#test_kill_wrong_argument):
	  test for [ruby-core:35086].

Fri Feb  4 12:11:51 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (str_utf8_nth): fixed a conditon of optimized lead
	  byte counting. [Bug #4366][ruby-dev:43170]

Fri Feb  4 00:14:55 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_reader_get_unused): no need to dup
	  before rb_str_resurrect.

Thu Feb  3 18:33:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	e ext/zlib/zlib.c (gzfile_reader_get_unused): use rb_str_resurrect
	  because gz->z.input is hidden string. [ruby-core:35057]
