@@ -1,3 +1,8 @@
+Sat Feb  5 21:47:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (mlhs_basic): include mlhs_post for ripper.  a patch
+	  from Michael Edgar at [ruby-core:35078].
+
 Sat Feb  5 11:29:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/json/parser/parser.h (GET_PARSER): raise TypeError.
